fixed extra space under embeds in css

--- a/views/style.styl
+++ b/views/style.styl
@@ -34,6 +34,10 @@ transition()
 .right
     float right
 
+/* fixes extra space under embeds */
+iframe, object
+    display block
+
 html, body
     width 100%
     height 100%
